# AI-Customer-Support-Platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docker/api/: Dockerfile
docs/: architecture.md  deployment-guide.md  incident-runbook.md  kubernetes-deployment-guide.md  local-setup-guide.md
helm/ai-platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/ai-platform/templates/: _helpers.tpl
helm/ai-platform/templates/api/: canary-ingress.yaml  deployment.yaml  hpa.yaml  ingress.yaml  job-migrate.yaml  job-seed-qdrant.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
helm/ai-platform/templates/postgresql/: service.yaml  statefulset.yaml
helm/ai-platform/templates/qdrant/: service.yaml  statefulset.yaml
helm/ai-platform/templates/redis/: deployment.yaml  service.yaml
k8s/: kubernetes-deployment-guide.md
k8s/argocd/: app-of-apps.yaml  install.yaml
k8s/argocd/apps/: ai-platform.yaml  monitoring-extras.yaml  monitoring.yaml  sealed-secrets-resources.yaml  sealed-secrets.yaml
k8s/kind/: cluster-config.yaml
k8s/namespaces/: namespaces.yaml  resource-quota.yaml
k8s/sealed-secrets/: ai-platform-secrets.yaml
monitoring/grafana/: dashboard-configmap.yaml
monitoring/grafana/dashboards/: api-overview.json
monitoring/loki/: values.yaml
monitoring/prometheus/: alert-rules.yaml  kube-prometheus-stack-values.yaml  servicemonitor.yaml
scripts/: kind-setup.sh  port-forward.sh  seal-secret.sh  seed_qdrant.py
src/ai_platform/: config.py  dependencies.py  main.py
src/ai_platform/api/: chat.py  conversations.py  file_extractors.py  files.py  health.py  rag.py
src/ai_platform/core/: logging.py  middleware.py  telemetry.py
src/ai_platform/db/: alembic.ini  env.py
src/ai_platform/db/versions/: 001_initial.py  002_add_conversation_title.py
src/ai_platform/models/: __init__.py  conversation.py
src/ai_platform/schemas/: chat.py
src/ai_platform/services/: cache_service.py  conversation_service.py  llm_client.py  rag_service.py
src/ai_platform/static/: index.html
src/docs/: architecture.md
src/scripts/: seed_qdrant.py
src/tests/: conftest.py  test_cache_service.py  test_chat_endpoint.py  test_health.py  test_llm_client.py
tests/: conftest.py  test_chat_endpoint.py  test_llm_client.py
vault/: external-secret.yaml  init.sh  policy.hcl
